crates/ferromark_parser/tests/snapshots/parser/footnote_reference_and_definition.snap
---
source: crates/ferromark_parser/tests/snapshot_parse.rs
description: "See[^1].\n\n[^1]: The footnote body.\n"
---
Document [0..35]
  Paragraph [0..9]
    Text "See" [0..3]
    FootnoteReference identifier="1" label=Some("1") [3..7]
    Text "." [7..8]
  FootnoteDefinition identifier="1" label=Some("1") [10..35]
    Paragraph [16..35]
      Text "The footnote body." [16..34]
